# md5-tools

./: .gitignore  Cargo.toml
documentation/: readme.md
scripts/: _z-run  build.z-run  tests.z-run  workbench.z-run  z-run
sources/: md5-cpio.rs  md5-create.bash  md5-diff.go  md5-diff.rs
sources/lib/: core.rs  digests.rs  flags.rs  hashes.rs  lib.rs  main_cpio.rs  main_create.rs  main_diff.rs  prelude.rs  sinks.rs
