
[package]
name = "md5-tools"
version = "0.0.0"
authors = ["Ciprian Dorin Craciun <ciprian@volution.ro>"]
edition = "2018"

[dependencies]
libc = "0.2.62"
cpio = "0.2.0"
md5 = "0.6.1"
regex = "1.3.1"
lazy_static = "1.4.0"
cpuprofiler = "0.0.3"

[[bin]]
name = "md5-cpio"
path = "./sources/md5-cpio.rs"

[[bin]]
name = "md5-diff"
path = "./sources/md5-diff.rs"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = false
incremental = false

