
[package]
name = "md5-tools"
version = "0.0.0"
authors = ["Ciprian Dorin Craciun <ciprian@volution.ro>"]
edition = "2018"

[features]
default = [
	#	"profile",
	]
profile = ["cpuprofiler"]

[dependencies]
libc = "0.2.62"
cpio = "0.2.0"
digest = "0.8.1"
md-5 = "0.8.0"
sha-1 = "0.8.1"
sha2 = "0.8.0"
sha3 = "0.8.2"
regex = "1.3.1"
lazy_static = "1.4.0"
cpuprofiler = { version = "0.0.3", optional = true }

[[bin]]
name = "md5-cpio"
path = "./sources/md5-cpio.rs"

[[bin]]
name = "md5-diff"
path = "./sources/md5-diff.rs"

[lib]
name = "md5_tools"
path = "./sources/lib/lib.rs"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = false
incremental = false

