
[package]
name = "md5-tools"
version = "0.0.0"
authors = ["Ciprian Dorin Craciun <ciprian@volution.ro>"]
edition = "2018"

[features]
default = [
	#	"profile",
	]
profile = ["cpuprofiler"]

[dependencies]
libc = "*"
digest = "*"
md-5 = "*"
sha-1 = "*"
sha2 = "*"
sha3 = "*"
walkdir = "*"
crossbeam = "*"
regex = "*"
cpio = "*"
argparse = "*"
chrono = "*"
atty = "*"
indicatif = "*"
cpuprofiler = { version = "*", optional = true }

[[bin]]
name = "md5-create"
path = "./sources/bin/md5-create.rs"

[[bin]]
name = "md5-diff"
path = "./sources/bin/md5-diff.rs"

[[bin]]
name = "md5-cpio"
path = "./sources/bin/md5-cpio.rs"

[lib]
name = "md5_tools"
path = "./sources/lib/lib.rs"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = false
incremental = false
panic = "abort"

